bump cleanup files